# rviz_trajectory_player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
launch/: rviz_trajectory_player.launch.py
src/: trajectory_republisher.cpp
worlds_and_models/: ur5.urdf
